fixed the overflow issue of what's new section

--- a/src/styles/new.scss
+++ b/src/styles/new.scss
@@ -1,5 +1,10 @@
 $highlight-color: #F92294;
 
+#new {
+  padding: 1rem;
+}
+
+
 .new--section {
   margin-bottom: 8rem;
 
@@ -24,17 +29,17 @@ $highlight-color: #F92294;
     width: 100%;
     border: 1px solid $highlight-color;
     max-width: 1000px;
-    height: 400px;
     margin-top: 2rem;
 
 
     .new--info {
       display: flex;
-      width: inherit;
-      height: inherit;
+    min-height: 400px;
+      width: 100%;
+      height: 100%;
       flex-direction: column;
       gap: 1rem;
-      padding: 0 3rem;
+      padding: 1rem 1.5rem;
       justify-content: center;
       backdrop-filter: blur(3px);
       background: radial-gradient(circle, transparentBackground(0, 0.4) 50%, transparentBackground(0, 0.75));
@@ -44,6 +49,7 @@ $highlight-color: #F92294;
         font-weight: 500;
         line-height: 1.9;
         text-shadow: 0 0 15px transparentBackground(0, 1);
+        font-size: clamp(0.8rem, 1vw, 1rem);
 
       }
 
